--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,1 +1,10 @@
-<router-outlet></router-outlet>
+<div fxLayout="column" fxLayoutAlign="stretch stretch" class="h-100">
+<mat-card fxFlex="7" fxLayout="row" fxLayoutAlign="start center">
+  <span class="mat-title">Chat app</span>
+</mat-card>
+
+  <div fxFlex="fill">
+
+    <router-outlet></router-outlet>
+  </div>
+</div>
