--- a/client/src/app/components/room/room.component.scss
+++ b/client/src/app/components/room/room.component.scss
@@ -1,3 +1,22 @@
 .highlighted {
   background-color: lightgray;
 }
+
+.room-container {
+  padding: 15px;
+  height: 100%;
+}
+
+.chat-container {
+  max-height: 85vh;
+  overflow-y: scroll;
+}
+
+.p-15 {
+  padding: 15px;
+}
+
+.user-box {
+  margin: 7px;
+  cursor: pointer
+}
